--- a/css/main.css
+++ b/css/main.css
@@ -489,11 +489,19 @@ body {
   height: 1rem;
   margin-right: 0.7rem;
   transition: 0.25s;
-  background-color: var(--color-primary-red);
-  -webkit-mask-image: url(../../img/chevron-thin-right.svg);
-  -webkit-mask-size: cover;
-  mask-image: url(../../img/chevron-thin-right.svg);
-  mask-size: cover;
+  background-image: url(../../img/chevron-thin-right.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@supports (-webkit-mask-image: url()) or (mask-image: url()) {
+  .list__item::before {
+    background-color: var(--color-primary-red);
+    -webkit-mask-image: url(../../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../../img/chevron-thin-right.svg);
+    mask-size: cover;
+    background-image: none;
+  }
 }
 .list__item:hover::before {
   margin-right: 0.9rem;
