--- a/scss/components/_list.scss
+++ b/scss/components/_list.scss
@@ -25,18 +25,25 @@
           height: 1rem;
           margin-right: .7rem;
           transition: .25s;
-          background-image: url(../../img/chevron-thin-right.svg);
-          background-size: cover;
-          background-repeat: no-repeat;
+        //   background-image: url(../../img/chevron-thin-right.svg);
+        //   background-size: cover;
+        //   background-repeat: no-repeat;
 
-        @supports (-webkit-mask-image: url()) or (mask-image: url()) {
-          background-color: var(--color-primary-red);
+        // @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+        //   background-color: var(--color-primary-red);
+        //   -webkit-mask-image: url(../../img/chevron-thin-right.svg);
+        //   -webkit-mask-size: cover;
+        //   mask-image: url(../../img/chevron-thin-right.svg);
+        //   mask-size: cover;
+        //   background-image: none;
+        // }
+
+        background-color: var(--color-primary-red);
           -webkit-mask-image: url(../../img/chevron-thin-right.svg);
           -webkit-mask-size: cover;
           mask-image: url(../../img/chevron-thin-right.svg);
           mask-size: cover;
           background-image: none;
-        }
           
       }
 
