--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -16,9 +16,9 @@
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
 
-  --shadow-dark: 0 2rem 6rem rgba(0,0,0, .3);
-  --shadow-light: 0 2rem 5rem rgba(0,0,0, .06);
-  --border-bottom-grey: .1rem var(--color-grey-light-2) solid;
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  --border-bottom-grey: 0.1rem var(--color-grey-light-2) solid;
 }
 
 *,
@@ -33,8 +33,8 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
 
-  @include mq (large) {
-     font-size: 50%;
+  @include mq(large) {
+    font-size: 50%;
   }
 }
 
