--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -53,14 +53,20 @@
 }
 
 @keyframes fadeInFromBottomExtend {
-  0% {transform: translateY(200%);
-  opacity: 0;}
+  0% {
+    transform: translateY(200%);
+    opacity: 0;
+  }
 
-  80% {transform: translateY(-5%);
-    opacity: 1;}
+  80% {
+    transform: translateY(-5%);
+    opacity: 1;
+  }
 
-  100% {transform: translateY(0);
-    opacity: 1;}
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 /////////////////////////general btn///////////////////////////
