--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -1,73 +1,73 @@
 @use '../base' as *;
 
 .search-bar {
-    flex: 0 0 40%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  flex: 0 0 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    @include mq (smallest) {
-      order: 1;
-      flex: 0 0 100%;
-    }
+  @include mq(smallest) {
+    order: 1;
+    flex: 0 0 100%;
+  }
 
-   &__input{
+  &__input {
     font-family: inherit;
     font-size: inherit;
     color: inherit;
     background-color: var(--color-grey-light-2);
     border: none;
     outline: none;
-    padding: .7rem 2rem;
+    padding: 0.7rem 2rem;
     border-radius: 10rem;
     width: 90%;
-    transition: .25s;
+    transition: 0.25s;
     margin-right: -3.5rem;
 
-    @include mq (smallest) {
-        transform: translateX(-3.5rem);
-        margin-right: -7rem;
-      }
+    @include mq(smallest) {
+      transform: translateX(-3.5rem);
+      margin-right: -7rem;
+    }
 
     &:focus {
-        width: 100%;
-        background: var(--color-grey-light-3);
+      width: 100%;
+      background: var(--color-grey-light-3);
     }
 
     &::placeholder {
-        color: var(--color-grey-light-4);
-        font-weight: 100;
+      color: var(--color-grey-light-4);
+      font-weight: 100;
     }
-   }
+  }
 
-   &__input:focus + &__btn {
+  &__input:focus + &__btn {
     background: var(--color-grey-light-3);
-   }
+  }
 
-   &__btn {
-     border: none;
-     background: var(--color-grey-light-2);
-     
+  &__btn {
+    border: none;
+    background: var(--color-grey-light-2);
+
     //  display: flex;
     //  align-items: center;
 
-     &:focus {
-         outline: none;
-     }
+    &:focus {
+      outline: none;
+    }
 
-     &:active {
-         transform: translateY(.2rem);
-     }
-   }
+    &:active {
+      transform: translateY(0.2rem);
+    }
+  }
 
-   &__icon {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     height: 2rem;
-     width: 2rem;
-     fill: var(--color-grey-dark-3);
-     position: relative;
-     z-index: 1;
-   }
+  &__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2rem;
+    width: 2rem;
+    fill: var(--color-grey-dark-3);
+    position: relative;
+    z-index: 1;
+  }
 }
